name:                PanGalacticDivision 
version:             0.1.0
synopsis:            PanGalacticDivision
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
library
  ghc-options:       -Wall -O2
  exposed-modules:   PanGalacticDivision
  build-depends:      base >= 4 && <4.8
                    , mtl
  default-language: Haskell2010

