name:                arrow-example
version:             0.1.0
synopsis:            State Monad Exsample
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable arrow-example1
  main-is: arrow-example1.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable arrow-example2
  main-is: arrow-example2.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable arrow-example3
  main-is: arrow-example3.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable arrow-example4
  main-is: arrow-example4.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable arrow-example5
  main-is: arrow-example5.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable arrow-example6
  main-is: arrow-example6.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl
                 , atl
  ghc-options: -O2
  default-language: Haskell2010
