name:                cofun
version:             0.1.0
synopsis:            cofun posts
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable cofun1
  main-is: cofun1.hs
  build-depends:   base == 4.8.*
                 , free
  ghc-options: -O2
  default-language: Haskell2010
