name:                conduit-example
version:             0.1.0
synopsis:            Conduit Exsample
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable conduit-example
  main-is: conduit-example.hs
  build-depends:   base >= 4.5 && < 4.8
                 , conduit >= 1.2
                 , conduit-extra >= 1.1.6
                 , resourcet >= 1.1
                 , transformers >= 0.4.2
                 , bytestring >= 0.1
                 , mtl >= 2.2
  ghc-options: -O2
  default-language: Haskell2010

executable state-machine
  main-is: state-machine.hs
  build-depends:   base >= 4.5 && < 4.8
                 , conduit >= 1.2
                 , conduit-combinators >= 0.3
                 , resourcet >= 1.1
                 , transformers >= 0.4.2
                 , bytestring >= 0.1
                 , mtl >= 2.2
                 , stm == 2.4.*
                 , async >= 2
                 , text >= 1.2
  ghc-options: -O2
  default-language: Haskell2010
