name:                extensible-effects-example
version:             0.1.0
synopsis:            extensible-effects Example
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------

executable extensible-effects-example1
  main-is: extensible-effects-example1.hs
  build-depends:   base >= 4.5 && < 4.8
                 , extensible-effects >= 1.9
  ghc-options: -O2
  default-language: Haskell2010

executable extensible-effects-example2
  main-is: extensible-effects-example2.hs
  build-depends:   base >= 4.5 && < 4.8
                 , extensible-effects >= 1.9
  ghc-options: -O2
  default-language: Haskell2010

executable extensible-effects-example3
  main-is: extensible-effects-example3.hs
  build-depends:   base >= 4.5 && < 4.8
                 , extensible-effects >= 1.9
                 , void
  ghc-options: -O2
  default-language: Haskell2010

executable extensible-effects-example4
  main-is: extensible-effects-example4.hs
  build-depends:   base >= 4.5 && < 4.8
                 , extensible-effects >= 1.9
                 , void
  ghc-options: -O2
  default-language: Haskell2010

executable extensible-effects-example5
  main-is: extensible-effects-example5.hs
  build-depends:   base >= 4.5 && < 4.8
                 , extensible-effects >= 1.9
                 , void
  ghc-options: -O2
  default-language: Haskell2010

executable extensible-effects-example6
  main-is: extensible-effects-example6.hs
  build-depends:   base >= 4.5 && < 4.8
                 , extensible-effects >= 1.9
                 , void
  ghc-options: -O2
  default-language: Haskell2010

