name:                free-example
version:             0.1.0
synopsis:            Free Monad Exsample
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable free-example1
  main-is: free-example1.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
  ghc-options: -O2
  default-language: Haskell2010

executable free-example2
  main-is: free-example2.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
  ghc-options: -O2
  default-language: Haskell2010

executable free-example3
  main-is: free-example3.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
  ghc-options: -O2
  default-language: Haskell2010

executable free-example4
  main-is: free-example4.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
  ghc-options: -O2
  default-language: Haskell2010

executable free-example5
  main-is: free-example5.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
                 , containers >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable free-example6
  main-is: free-example6.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
                 , containers >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable free-example7
  main-is: free-example7.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
  ghc-options: -O2
  default-language: Haskell2010

executable free-example8
  main-is: free-example8.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , vector >= 0.10
  ghc-options: -O2
  default-language: Haskell2010

executable free-example9
  main-is: free-example9.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , vector >= 0.10
                 , random >= 1.1
                 , MonadRandom >= 0.3
  ghc-options: -O2
  default-language: Haskell2010

executable free-exampleA
  main-is: free-exampleA.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
                 , containers >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable free-exampleB
  main-is: free-exampleB.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
                 , containers >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable free-exampleC
  main-is: free-exampleC.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
                 , containers >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable decPost
  main-is: decPost.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
                 , containers >= 0.5
                 , multiset == 0.3.2
                 , transformers
  ghc-options: -O2
  default-language: Haskell2010

executable free-exampleD
  main-is: free-exampleD.hs
  build-depends:   base >= 4.5 && < 4.9
                 , free >= 4.10
                 , mtl >= 2.2.1
                 , containers >= 0.5
                 , transformers
  ghc-options: -O2
  default-language: Haskell2010

