name:                lens-example
version:             0.1.0
synopsis:            Lens Example
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable lens-example1
  main-is: lens-example1.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , lens >= 4
                 , transformers >= 0.4
  ghc-options: -O2
  default-language: Haskell2010

executable lens-example2
  main-is: lens-example2.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , lens >= 4
                 , lens-action
                 , transformers >= 0.4
                 , deepseq >= 1.3
                 , containers
  ghc-options: -O2
  default-language: Haskell2010

executable lens-example3
  main-is: lens-example3.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , lens >= 4
                 , lens-action
                 , transformers >= 0.4
  ghc-options: -O2
  default-language: Haskell2010

executable lens-example4
  main-is: lens-example4.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , lens >= 4
                 , lens-action
                 , transformers >= 0.4
  ghc-options: -O2
  default-language: Haskell2010

executable lens-example5
  main-is: lens-example5.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , lens >= 4
                 , lens-action
                 , transformers >= 0.4
  ghc-options: -O2
  default-language: Haskell2010

executable lens-example6
  main-is: lens-example6.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , lens >= 4
                 , lens-action
                 , transformers >= 0.4
  ghc-options: -O2
  default-language: Haskell2010

executable lens-example7
  main-is: lens-example7.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , lens >= 4
                 , lens-action
                 , transformers >= 0.4
                 , profunctors
  ghc-options: -O2
  default-language: Haskell2010
