name:                misc-example
version:             0.1.0
synopsis:            misc
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable misc-example1
  main-is: misc-example1.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , mono-traversable >= 0.9
                 , text
  ghc-options: -O2
  default-language: Haskell2010

executable misc-example2
  main-is: misc-example2.hs
  build-depends:   base >= 4.5 && < 4.8
                 , semigroups
  ghc-options: -O2
  default-language: Haskell2010

executable misc-example3
  main-is: misc-example3.hs
  build-depends:   base >= 4.5 && < 4.8
                 , containers
                 , transformers
  ghc-options: -O2
  default-language: Haskell2010

executable algebra4
  main-is: algebra4.hs
  build-depends:   base >= 4.5 && < 4.8
                 , recursion-schemes
                 , free
                 , comonad
  ghc-options: -O2
  default-language: Haskell2010

