name:                monad-example
version:             0.1.0
synopsis:            Monad Example
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10


executable monad-example1
  main-is: monad-example1.hs
  other-modules: Example.Sheep
  build-depends:   base >= 4.5 && < 4.8
                 , containers >= 0.5
                 , directory >= 1.2
  ghc-options: -O2
  default-language: Haskell2010

executable monad-example2
  main-is: monad-example2.hs
  build-depends:   base >= 4.5 && < 4.8
                 , containers >= 0.5
                 , directory >= 1.2
                 , mtl >= 2.2
                 , transformers >= 0.4.2
                 , mwc-random >= 0.13
  ghc-options: -O2
  default-language: Haskell2010

executable monad-example3
  main-is: monad-example3.hs
  build-depends:   base >= 4.5 && < 4.8
                 , containers >= 0.5
                 , mtl >= 2.2
  ghc-options: -O2
  default-language: Haskell2010

executable monad-example4
  main-is: monad-example4.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , time >= 1.4
                 , containers >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable monad-example5
  main-is: monad-example5.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , mwc-random >= 0.13
  ghc-options: -O2
  default-language: Haskell2010

executable ex-reader
  main-is: ex-reader.hs
  build-depends:   base >= 4.5 && < 4.8
                 , parsec >= 3
                 , mtl >= 2.2
  ghc-options: -O2
  default-language: Haskell2010

executable ex-writer
  main-is: ex-writer.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
  ghc-options: -O2
  default-language: Haskell2010

executable ex-transformer1
  main-is: ex-transformer1.hs
  other-modules: Example.Sheep
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
  ghc-options: -O2
  default-language: Haskell2010

executable ex-transformer2
  main-is: ex-transformer2.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
  ghc-options: -O2
  default-language: Haskell2010

executable ex-transformer3
  main-is: ex-transformer3.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
  ghc-options: -O2
  default-language: Haskell2010

executable functor-example 
  main-is: functor-example.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010
