name:                monad-memo-example
version:             0.1.0
synopsis:            monad-memo Example
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable monad-memo-example1
  main-is: monad-memo-example1.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , monad-memo >= 0.4
                 , transformers >= 0.4
  ghc-options: -O2
  default-language: Haskell2010

executable monad-memo-example2
  main-is: monad-memo-example2.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , monad-memo >= 0.4
                 , transformers >= 0.4
                 , array >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable monad-memo-example3
  main-is: monad-memo-example3.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , monad-memo >= 0.4
                 , array >= 0.5
                 , vector >= 0.10
                 , containers >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable monad-memo-example4
  main-is: monad-memo-example4.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , monad-memo >= 0.4
                 , array >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable MaybeLike
  main-is: MaybeLike.hs 
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , monad-memo >= 0.4
                 , array >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable MapLike
  main-is: MapLike.hs 
  build-depends:   base >= 4.5 && < 4.8
                 , monad-memo >= 0.4
                 , unordered-containers >= 0.2
                 , hashable >= 1.2
  ghc-options: -O2
  default-language: Haskell2010

executable Cache
  main-is: Cache.hs 
  build-depends:   base >= 4.5 && < 4.8
                 , monad-memo >= 0.4
                 , hashtables >= 1.2
                 , hashable >= 1.2
  ghc-options: -O2
  default-language: Haskell2010

executable Array
  main-is: Array.hs 
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , monad-memo >= 0.4
                 , array >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

executable Vector
  main-is: Vector.hs 
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , monad-memo >= 0.4
                 , array >= 0.5
                 , vector >= 0.10
                 , primitive >= 0.5
  ghc-options: -O2
  default-language: Haskell2010

