name:                monadfix-example
version:             0.1.0
synopsis:            MonadFix Exsample
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable monadfix-example1
  main-is: monadfix-example1.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable monadfix-example2
  main-is: monadfix-example2.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable monadfix-example3
  main-is: monadfix-example3.hs
  build-depends:   base >= 4.5 && < 4.8
  ghc-options: -O2
  default-language: Haskell2010

executable recursivedo 
  main-is: recursivedo.hs
  build-depends:   base >= 4.5 && < 4.8
                 , transformers >= 0.4.2
  ghc-options: -O2
  default-language: Haskell2010

