name:                objective-example
version:             0.1.0
synopsis:            objective example
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable objective-example1
  main-is: objective-example1.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , objective <= 1.0.5
                 , transformers
                 , free
  ghc-options: -O2
  default-language: Haskell2010

executable objective-example2
  main-is: objective-example2.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , objective <= 1.0.5
                 , transformers
                 , free
                 , monad-skeleton
  ghc-options: -O2
  default-language: Haskell2010
