name:                path-example
version:             0.1.0
synopsis:            path example
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

-- -----------------------------------------------------------------------------
executable path-example1
  main-is: path-example1.hs
  build-depends:   base >= 4.5 && < 4.8
                 , mtl >= 2.2
                 , path == 0.5.2
  ghc-options: -O2
  default-language: Haskell2010
