name:                template-example
version:             0.1.0
synopsis:            Template
-- description:         
license:             BSD3
license-file:        LICENSE
author:              t10471
maintainer:          t10471 <t104711202@gmail.com>
copyright:           (c) t10471 2014-2015
category:            Sample Code
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  MyMacro 
  build-depends:   base >= 4.5 && < 5.0
                 , template-haskell >= 2.10
                 , users == 0.5.0.0
                 , mtl >= 2.2.1
  ghc-options: -O2
  default-language: Haskell2010

-- -----------------------------------------------------------------------------
executable template-example1
  main-is: template-example1.hs
  build-depends:   base >= 4.5 && < 5.0
                 , template-haskell >= 2.10
                 , template-example
                 , users == 0.5.0.0
                 , mtl >= 2.2.1
  ghc-options: -O2
  default-language: Haskell2010
